----------------------------------------------------------------------------

SimGrid (3.27.1) NOT RELEASED YET (v3.28 expected June 21. 2021, 03:32 UTC)

S4U:
 - Fixed a bug where Activity::wait_for() killed the activity on timeout.
   Explicitly cancel the activity to get back to previous behavior.

SMPI:
 - The default SMPI compiler flags are no more taken from the environment.
   They can be explicitly set through cmake parameters SMPI_C_FLAGS,
   SMPI_CXX_FLAGS, or SMPI_Fortran_FLAGS.

LUA:
 - Lua platform files are deprecated. Their support will be dropped after v3.31.

XBT:
 - xbt_assert is not disabled anymore, even when built with enable_debug=off.

Documentation:
 - New tutorial: Model-checking and formal assessment

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#47: Complete and fix tests from teshuite/s4u/activity-lifecycle
 - FG#64: Configuring smpi/IB-penalty-factors
 - FG#67: Running computation concurrently with MPI_Iallreduce
 - GH#322: Issue when an actor kills his host vm

----------------------------------------------------------------------------

SimGrid (3.27) March 29. 2021

The Ragnar Release (anniversary of the siege of Paris by Vikings in 845)

Main user-visible changes:
 - All functions marked as deprecated for one year were removed.
 - Removed all that was related to the "Storage" type in all APIs and bindings.
   "Disks" have been introduced more than a year ago to replace them for the better.
   It's time to finish this replacement.
 - SMPI ABI breaks from previous version: MPI global handles (predefined datatypes,
   ops, COMM_WORLD) are now defined differently, and can be used in initializers,
   avoiding "initializer element is not constant" errors with some codes. Please be
   careful to recompile your MPI codes if switching to this new SimGrid version.
 - Network model ns-3 now requires version ns-3.28 or higher.