@@ -76,7 +76,7 @@ foreach (example actor-create actor-daemon actor-exiting actor-join actor-kill
 		 		 network-wifi
                  io-async io-file-system io-file-remote io-disk-raw io-dependent
                  platform-failures platform-profile platform-properties
-                 plugin-host-load plugin-link-load
+                 plugin-host-load plugin-link-load plugin-prodcons
                  replay-comm replay-io
                  routing-get-clusters
                  synchro-barrier synchro-condition-variable synchro-condition-variable-waituntil synchro-mutex synchro-semaphore
